force-app/main/default/objects/Opportunity/fields/GcScheduleId__c.field-meta.xml
<CustomField>
    <fullName>GcScheduleId__c</fullName>
    <externalId>true</externalId>
    <label>GC Schedule ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>