force-app/main/default/objects/Opportunity/fields/GcSignupId__c.field-meta.xml
<CustomField>
    <fullName>GcSignupId__c</fullName>
    <label>GC Signup ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>