force-app/main/default/objects/Opportunity/fields/Is_process__c.field-meta.xml
<CustomField>
    <fullName>Is_process__c</fullName>
    <label>Is_process</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>