force-app/main/default/objects/Opportunity/fields/is_process_status__c.field-meta.xml
<CustomField>
    <fullName>is_process_status__c</fullName>
    <description>This will show the payment status</description>
    <label>is_process_status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>