force-app/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>Grant</label>
</RecordType>