force-app/main/default/objects/Opportunity/recordTypes/MajorGift.recordType-meta.xml
<RecordType>
    <fullName>MajorGift</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>MajorGift</label>
</RecordType>