force-app/main/default/objects/Opportunity/recordTypes/MatchingDonation.recordType-meta.xml
<RecordType>
    <fullName>MatchingDonation</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>MatchingDonation</label>
</RecordType>