force-app/main/default/objects/Opportunity/recordTypes/MemMembershipbership.recordType-meta.xml
<RecordType>
    <fullName>MemMembershipbership</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <label>Membership</label>
</RecordType>