force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Record_type.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Record_type</fullName>
    <active>true</active>
    <businessProcess>sales process</businessProcess>
    <description>This is another record type creation for non profit</description>
    <label>Opportunity Record type</label>
</RecordType>